samples/errors/if_branch_mismatch.opal
;; Error: then-branch returns Int, else-branch returns Bool — must agree
(let classify {n} (if (> n 0) 1 False))
